# omni_ticket

./: .dockerignore  .env.production.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vercel.json
services/omni-ticket-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  vercel.json
services/omni-ticket-backend/.github/workflows/: ci.yml
services/omni-ticket-backend/app/: __init__.py  main.py  worker.py
services/omni-ticket-backend/app/core/: __init__.py  attachment_tokens.py  auth.py  config.py  observability.py  passwords.py  rate_limit.py  store.py  webhooks.py
services/omni-ticket-backend/app/db/: __init__.py  audit.py  bootstrap.py  connectors.py  management.py  mappers.py  models.py  operations.py  outbound.py  rate_limit.py  session.py  settings.py  store_sync.py  ticketing.py
services/omni-ticket-backend/app/models/: __init__.py  domain.py
services/omni-ticket-backend/app/services/: __init__.py  ai.py  analytics.py  attachments.py  connectors.py  sla.py  tickets.py  worker.py
services/omni-ticket-backend/docs/: ARCHITECTURE.md  BACKEND_BACKLOG.md  DEPLOYMENT.md  PRODUCTION_BUILD_PLAN.md
services/omni-ticket-backend/migrations/: env.py
services/omni-ticket-backend/migrations/versions/: 20260527_0001_initial_platform_schema.py  20260527_0002_connector_accounts.py  20260529_0003_outbound_messages.py  (+3 more)
services/omni-ticket-backend/tests/: conftest.py  test_config.py  test_database.py  test_health.py  test_operations.py
(+28 files in other folders)
