[project]
name = "omni-ticket-backend"
version = "0.1.0"
description = "Python backend for Omni Ticket omnichannel support operations."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.36",
]

[project.scripts]
app = "app.main:app"

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.7.0",
  "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*", "tests*"]
